examples/tests/invalid/construction.w
bring cloud;

let x = new cloud.BucketProps(1);
          //^ Cannot instantiate type "BucketProps" because it is not a class
